# Cholesky_Alg

./: CMakeLists.txt  README.md
Final/: CMakeLists.txt
Final/include/: header.hpp
Final/source/: holecki_alg.cpp  main.cpp  synchronizer.cpp
include/: header.hpp
source/: holecki_alg.cpp  main.cpp  matrx_funcs.cpp
